# fdp-installer

./: .gitattributes  README.md  pixi.toml  pyproject.toml
.github/workflows/: conda_build.yaml
conda-recipe/: recipe.yaml  run_build.sh
fdp_installer/: _version.py  pixi-staging.toml  pixi.toml
fdp_installer/conda-recipe/: meta.yaml  recipe.yaml
tests/: test_pixi_render.py  testit.py
