[build-system]
requires = ["setuptools>=61", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "fdp-installer"
dynamic = ["version"]
description = "Bootstrap installer for Fusion Data Platform"
readme = "README.md"
authors = [
    {name = "FDP Team", email = "fdp@example.com"}
]
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/ga-fdp/fdp-installer"
Repository = "https://github.com/ga-fdp/fdp-installer"

[project.scripts]
fdp-install = "fdp_installer.bin.fdp_install:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fdp_installer*"]

[tool.setuptools.package-data]
fdp_installer = ["bin/*", "pixi.toml"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "fdp_installer/_version.py"
versionfile_build = "fdp_installer/_version.py"
tag_prefix = "release-"
parentdir_prefix = "fdp_installer-"
